Added title and image

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jasmine's Webpage</title>
 </head>
 <body>
-    <p>test</p>
+    <h2>Jasmine's Webpage</h2>
+    <img src="SandersCollegeOfBusinessAndTechLogo.webp" alt="UNA Logo">
 </body>
 </html>
