--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jasmine's Webpage</title>
 </head>
 <body>
+    <style> h2 {text-align:"center";}</style>
     <h2>Jasmine's Webpage</h2>
     <img src="SandersCollegeOfBusinessAndTechLogo.webp" alt="UNA Logo">
 </body>
