--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <style> h2 {text-align:"center";}</style>
-    <h2>Jasmine's Webpage</h2>
+    <h2>Jasmine's Webpage</h2><hr>
     <img src="SandersCollegeOfBusinessAndTechLogo.webp" alt="UNA Logo">
 </body>
 </html>
