--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <style> h2 {text-align:center;}</style>
-    <h2>Jasmine's Webpage</h2><hr>
-    <img src="SandersCollegeOfBusinessAndTechLogo.webp" alt="UNA Logo">
+    <div class="jumbotron container-fluid" id="home"> == $0
+        ::before
+        <div class=""img-responsive imgworld" src="sunset.jpeg" style=""top: 0px; opacity: 1.1;">
+        ::after
+    </div>
+    <h2 style="color: white; opacity: 1.1;" class="jumbotext">Jasmine's Webpage</h2><hr>
 </body>
 </html>
