--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style> h2 {text-align:center;}</style>
     <div class="jumbotron container-fluid" id="home"> == $0
         ::before
-        <div class=""img-responsive imgworld" src="sunset.jpeg" style=""top: 0px; opacity: 1.1;">
+        <div class="img-responsive imgworld" src="sunset.jpeg" style=""top: 0px; opacity: 1.1;">
         ::after
     </div>
     <h2 style="color: white; opacity: 1.1;" class="jumbotext">Jasmine's Webpage</h2><hr>
