--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #333;
-  position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
 }
@@ -38,17 +37,26 @@ li a:hover {
 }
 
 .active {
-  background-color: #4CAF50;
+  background-color: #c789b9;
 }
 </style>
 <body>
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-
-    </div>
+    <div class="header">
+        <h2>Scroll Down</h2>
+        <p>Scroll down to see the sticky effect.</p>
+      </div>
+      
+      <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      
+      <h3>Sticky Navigation Bar Example</h3>
+      <p>The navbar will <strong>stick</strong> to the top when you reach its scroll position.</p>
+      <p><strong>Note:</strong> Internet Explorer do not support sticky positioning and Safari requires a -webkit- prefix.</p>
+      <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+      <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
     <h2 style="text-align:center;">Jasmine's Portfolio</h2>
 
 
