added font family

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Jasmine Morgan</title>
 </head>
 <style>
+.h2 {
+  font-family: Verdana, Arial, sans-serif;
+}
+
 body {
   font-size: 28px;
 }
@@ -15,7 +19,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #e5e499;
   position: sticky;
   top: 0;
 }
@@ -42,17 +46,17 @@ li a:hover {
 </style>
 <body>
     <div class="header">
-        <h2>Scroll Down</h2>
-        <p>Scroll down to see the sticky effect.</p>
+        <h2 style="text-align:center;">Jasmine's Portfolio</h2>
+        <p>A showcase of HTML</p>
       </div>
       
       <ul>
         <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       
-      <h3>Sticky Navigation Bar Example</h3>
+      <h3>Jasmine Morgan</h3>
       <p>The navbar will <strong>stick</strong> to the top when you reach its scroll position.</p>
       <p><strong>Note:</strong> Internet Explorer do not support sticky positioning and Safari requires a -webkit- prefix.</p>
       <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
