--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <title>Jasmine Morgan</title>
 </head>
 <style>
-.h2 {
-  font-family: Verdana, Arial, sans-serif;
-}
-
 body {
   font-size: 28px;
 }
@@ -41,7 +37,7 @@ li a:hover {
 }
 
 .active {
-  background-color: #c789b9;
+  background-color: #e9b4dc;
 }
 </style>
 <body>
@@ -56,9 +52,7 @@ li a:hover {
         <li><a href="#contact">Contact</a></li>
       </ul>
       
-      
-      <p>The navbar will <strong>stick</strong> to the top when you reach its scroll position.</p>
-      <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+      <p>Hello! My name is Jasmine Morgan, and as of Fall 2023 I am a freshman at UNA. I'm majoring in Information Technology, and conccentrating in software development.</p>
       <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
       <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
       <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
