change background color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #f0efd6;
+  background-color: #c78ebd;
   position: sticky;
   top: 0;
 }
@@ -37,7 +37,7 @@ li a:hover {
 }
 
 .active {
-  background-color: #e9b4dc;
+  background-color: #e587ce;
 }
 
 .p1 {
@@ -61,7 +61,7 @@ li a:hover {
 }
 
 </style>
-<body>
+<body style="background-color:rgb(210, 214, 191);">
     <div class="header">
         <h2 style="text-align:center;" style="">Jasmine's Portfolio</h2>
         <p style="text-align:center;">A showcase of HTML</p>
