--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ li a:hover {
   font-family: Arial;
 }
 
+table, th, td {
+  border: 1px solid black;
+}
 </style>
 <body style="background-color:rgb(247, 250, 234);">
     <div class="header">
@@ -74,7 +77,7 @@ li a:hover {
       </ul>
       <p>Hello! My name is Jasmine Morgan, and as of Fall 2023 I am a freshman at UNA. I'm majoring in Information Technology, and conccentrating in software development.</p>
 
-      <table>
+      <table style="width:100%" style="text-align:center">
         <tr>
           <td>test1</td>
           <td>test2</td>
@@ -86,7 +89,7 @@ li a:hover {
           <td>test6</td>
         </tr>
       </table>
-      
+
       <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
       <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
       <p>Some text to enable scrolling. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
