schedule in table

--- a/index.html
+++ b/index.html
@@ -78,15 +78,47 @@ table, th, td {
       <p>Hello! My name is Jasmine Morgan, and as of Fall 2023 I am a freshman at UNA. I'm majoring in Information Technology, and conccentrating in software development.</p>
 
       <table style="width:100%" style="text-align:center">
-        <tr>
-          <td>test1</td>
-          <td>test2</td>
-          <td>test3</td>
+        <tr>                <!--- row 11 -->
+          <td> </td>
+          <td>Spanish 101</td>
+          <td> </td>
+          <td>Spanish 101</td>
         </tr>
-        <tr>
-          <td>test4</td>
-          <td>test5</td>
-          <td>test6</td>
+        <tr>                <!-- row 1 -->
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+        <tr>                <!-- row 2-->
+          <td>FYE</td>
+          <td>CS 135</td>
+          <td> </td>
+          <td>CS 135</td>
+        </tr>
+        <tr>                <!-- row 3-->
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+        <tr>                <!-- row 4-->
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+        <tr>                <!-- row 5-->
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+        <tr>                <!-- row 6-->
+          <td>MA 100</td>
+          <td> </td>
+          <td>MA 100</td>
+          <td> </td>
         </tr>
       </table>
 
