--- a/index.html
+++ b/index.html
@@ -79,42 +79,56 @@ table, th, td {
 
       <table style="width:100%" style="text-align:center">
         <tr>                <!--- row 11 -->
+          <td>11am</td>
           <td> </td>
           <td>Spanish 101</td>
           <td> </td>
           <td>Spanish 101</td>
         </tr>
+        <tr>                <!-- row 12 -->
+          <td>12pm</td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
         <tr>                <!-- row 1 -->
+          <td>1pm</td>
           <td> </td>
           <td> </td>
           <td> </td>
           <td> </td>
         </tr>
         <tr>                <!-- row 2-->
+          <td>2pm</td>
           <td>FYE</td>
           <td>CS 135</td>
           <td> </td>
           <td>CS 135</td>
         </tr>
         <tr>                <!-- row 3-->
+          <td>3pm</td>
           <td> </td>
           <td> </td>
           <td> </td>
           <td> </td>
         </tr>
         <tr>                <!-- row 4-->
+          <td>4pm</td>
           <td> </td>
           <td> </td>
           <td> </td>
           <td> </td>
         </tr>
         <tr>                <!-- row 5-->
+          <td>5pm</td>
           <td> </td>
           <td> </td>
           <td> </td>
           <td> </td>
         </tr>
         <tr>                <!-- row 6-->
+          <td>6pm</td>
           <td>MA 100</td>
           <td> </td>
           <td>MA 100</td>
