--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@ li a:hover {
 }
 
 .p1 {
-  font-family: Arial;
+  font-family: "Arial;"
 }
 
 .p2 {
-  font-family: Arial;
+  font-family: "Arial;"
 }
 
 .p3 {
-  font-family: Arial;
+  font-family: "Arial;"
 }
 
 .p4 {
-  font-family: Arial;
+  font-family: "Arial;""
 }
 
 .h2 {
-  font-family: Arial;
+  font-family: "Arial;"
 }
 
 table, th, td {
@@ -76,7 +76,8 @@ table, th, td {
         <li><a href="#contact">Contact</a></li>
       </ul>
       <p>Hello! My name is Jasmine Morgan, and as of Fall 2023 I am a freshman at UNA. I'm majoring in Information Technology, and conccentrating in software development.</p>
-
+      <p>This is my schedule as of Fall 2023.</p>
+      <h3 style="text-align:center;">Schedule</h3>
       <table style="width:100%" style="text-align:center">
         <tr>                <!--- row 11 -->
           <td>11am</td>
