--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ table, th, td {
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <p>Hello! My name is Jasmine Morgan, and as of Fall 2023 I am a freshman at UNA. I'm majoring in Information Technology, and conccentrating in software development.</p>
+      <p>   Hello! My name is Jasmine Morgan, and as of Fall 2023 I am a freshman at UNA. I'm majoring in Information Technology, and concentrating in software development.</p>
+      <hr> <p>   I don't have very much experience in programming, but I grew up making websites for fun with my dad. I'm excited to push my limits and learn many new things in CS 135!</p>
       <p>This is my schedule as of Fall 2023.</p>
       <h3 style="text-align:center;">Schedule</h3>
       <table style="width:100%" style="text-align:center">
