--- a/index.html
+++ b/index.html
@@ -61,26 +61,6 @@ li a:hover {
   background-color: #fd95e3;
 }
 
-.p1 {
-  font-family: "Arial;"
-}
-
-.p2 {
-  font-family: "Arial;"
-}
-
-.p3 {
-  font-family: "Arial;"
-}
-
-.p4 {
-  font-family: "Arial;""
-}
-
-.h2 {
-  font-family: "Arial;"
-}
-
 table, th, td {
   border: 1px solid black;
 }
@@ -108,8 +88,8 @@ table, th, td {
 <body style="background-color:rgb(247, 250, 234);">
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <div class="header">
-        <h2 style="text-align:center;">Jasmine's Portfolio</h2>
-        <p style="text-align:center;">A personal webpage</p>
+        <h2 style="text-align:center;" style="font-family: Arial">Jasmine's Portfolio</h2>
+        <p style="text-align:center;" style="font-family: Arial">A personal webpage</p>
       </div>
       
       <ul>
