--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ table, th, td {
       </ul>
       <p>   Hello! My name is Jasmine Morgan, and as of Fall 2023 I am a freshman at UNA. I'm majoring in Information Technology, and concentrating in software development.</p>
       <hr> <p>   I don't have very much experience in programming, but I grew up making websites for fun with my dad. I'm excited to push my limits and learn many new things in CS 135!</p>
-      <p>This is my schedule as of Fall 2023.</p>
+      <p>This is my schedule as of Fall 2023. I also have an English class which is not listed because it is online, but I usually try to work on it inbetween my classes.</p>
       <h3 style="text-align:center;">Schedule</h3>
       <table style="width:100%" style="text-align:center">
         <tr>                <!--- row 11 -->
