--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ table, th, td {
 <body style="background-color:rgb(247, 250, 234);">
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <div class="header">
-        <h2 style="text-align:center;" style="font-family: Arial">Jasmine's Portfolio</h2>
-        <p style="text-align:center;" style="font-family: Arial">A personal webpage</p>
+        <h2 style="text-align:center;" style="font-family: Arial;">Jasmine's Portfolio</h2>
+        <p style="text-align:center;" style="font-family: Arial;">A personal webpage</p>
       </div>
       
       <ul>
