--- a/index.html
+++ b/index.html
@@ -46,11 +46,17 @@ table, th, td {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #04AA6D;
+  background-color: #3498DB;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -80,11 +86,8 @@ table, th, td {
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #ddd;}
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
 </style>
 <body style="background-color:rgb(247, 250, 234);">
     <div class="header">
@@ -161,8 +164,8 @@ table, th, td {
       </table>
 
       <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div class="dropdown-content">
+        <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+        <div id="myDropdown" class="dropdown-content">
           <p>Link 1</p>
           <p>Link 2</p>
           <p>Link 3</p>
