--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jasmine Morgan</title>
 </head>
+<script>
+  /* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown menu if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script> 
 <style>
 body {
   font-size: 28px;
@@ -164,11 +185,11 @@ table, th, td {
       </table>
 
       <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+        <button onclick="myFunction()" class="dropbtn">More Schedule Information</button>
         <div id="myDropdown" class="dropdown-content">
-          <p>Link 1</p>
-          <p>Link 2</p>
-          <p>Link 3</p>
+          <p>test</p>
+          <p>test</p>
+          <p>test</p>
         </div>
       </div>
 
