--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@ table, th, td {
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">More Schedule Information</button>
         <div id="myDropdown" class="dropdown-content">
-          <p>test</p>
-          <p>test</p>
-          <p>test</p>
+          <p>FYE: 2:00pm - 2:50pm w/ Dr. Rhodes. Flowers Hall 307</p>
+          <p>CS 135: 2:00pm - 3:15pm w/ Dr. Banks. Raburn Wing of Keller Hall 211</p>
+          <p>EN 111: online</p>
+          <p>MA 100: 6:00pm - 7:15pm w/ Dr. Partrick. Stevens Hall 110</p>
+          <p>SP 101: 11:00am - 12:15pm w/ Dr. Infanger. Wesleyan Hall 115</p>
         </div>
       </div>
 
