--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ table, th, td {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
+  background-color: #fd95e3;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -185,7 +185,7 @@ table, th, td {
       </table>
 
       <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">More Schedule Information</button>
+        <button onclick="myFunction()" class="dropbtn">More Schedule Information. This is a click dropdown menu!</button>
         <div id="myDropdown" class="dropdown-content">
           <p>FYE: 2:00pm - 2:50pm w/ Dr. Rhodes. Flowers Hall 307</p>
           <p>CS 135: 2:00pm - 3:15pm w/ Dr. Banks. Raburn Wing of Keller Hall 211</p>
