--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ table, th, td {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #fd95e3;
+  background-color: #e2b7da;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -77,7 +77,7 @@ table, th, td {
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background-color: #fd95e3;
 }
 
 /* The container <div> - needed to position the dropdown content */
